[gd_scene load_steps=3 format=3 uid="uid://ban2f7l6a0hf3"]

[ext_resource type="Script" uid="uid://bgujx2ib07v4w" path="res://game_ship/note_area.gd" id="1_xwgd2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_r66kj"]
size = Vector3(0.875977, 0.602905, 1)

[node name="Area3D" type="Area3D"]
script = ExtResource("1_xwgd2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_r66kj")

[node name="PickupNote1" type="AudioStreamPlayer3D" parent="."]
bus = &"Sound"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
